修复中文翻译失效问题
- 移除 node_helper.js 中重复的 zh-cn 翻译加载，避免异步加载顺序混乱
- 翻译 LOCKSTRING_WARNING 为中文

--- a/translations/zh-cn.json
+++ b/translations/zh-cn.json
@@ -62,7 +62,7 @@
   "ERROR": "错误!",
   "LOADING": "加载中 …",
 
-  "LOCKSTRING_WARNING": "This module was hidden by LIST_OF_MODULES, it can not be shown.",
+  "LOCKSTRING_WARNING": "此模块已被 LIST_OF_MODULES 隐藏，无法显示。",
   "FORCE_SHOW": "继续.",
 
   "UPDATE_MENU_NAME": "更新",
