修复电源菜单中的 STOPMM 翻译缺失

--- a/translations/en.json
+++ b/translations/en.json
@@ -16,6 +16,7 @@
   "MONITORTIMED": "Turn monitor ON briefly",
   "RESTART": "Restart",
   "RESTARTMM": "Restart MagicMirror²",
+  "STOPMM": "Stop MagicMirror²",
   "SHUTDOWN": "Shutdown",
   "FULLSCREEN": "Toggle Fullscreen",
   "MINIMIZE": "Minimize Browser",
